<resources>
    <string name="app_name">Personal Organiser</string>
    <string name="storage_name">Personal_Organiser</string>

    <string name="some_error">Some Error Occurred!</string>
    <string name="splash_title">Personal Organiser</string>
    <string name="splash_sub_title">Make Life Easier !!</string>

    <string name="title_event">Event</string>
    <string name="title_to_do_task">To-Do</string>
    <string name="title_friends">Friends</string>
    <string name="title_gallery">Gallery</string>


    <string name="content_camera">Camera icon</string>
    <string name="content_friend">Friend icon</string>

    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="choose_your_picture">Choose your picture</string>
    <string name="saving">Saving. . .</string>
    <string name="updating">Updating. . .</string>
    <string name="loading">Loading. . .</string>
    <string name="deleting">Deleting. . .</string>
    <string name="delete">Delete</string>
    <string name="stored">Stored!</string>
    <string name="updated">Updated!</string>
    <string name="Deleted">Deleted!</string>
    <string name="error_stored">Can\'t storing</string>
    <string name="error_deleted">Can\'t deleting</string>
    <string name="error_updated">Can\'t updating</string>

    <!-- TODO: Friend Activity -->
    <string name="hints_first_name">First name</string>
    <string name="hints_last_name">Last name</string>
    <string name="hints_genter">Gender</string>
    <string name="hints_age">Age</string>
    <string name="hints_address">Address</string>
    <string name="button_save">Save</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>